syntax = "proto3";

package device.api;

option java_package = "device";
option java_outer_classname = "leds";
option go_package = "github.com/asnowfix/go-devolo-plc/proto";

// LED Settings Get message
message LedSettingsGet {
  enum Ledstate {
    LED_ON = 0;
    LED_OFF = 1;
  }
  Ledstate state = 1;
}

// LED Settings Set message
message LedSettingsSet {
  enum Ledstate {
    LED_ON = 0;
    LED_OFF = 1;
  }
  Ledstate state = 1;
}

// LED Settings Set Response message
message LedSettingsSetResponse {
  enum Result {
    SUCCESS = 0;
    UNKNOWN_ERROR = 255;
  }
  Result result = 1;
}
